Cycles: compiling OpenCL program bake... #80149

Closed
opened 2020-08-27 00:08:04 +02:00 by Marcus Spengler · 11 comments

blender_debug_output.txt

{F8813049}System Information
Operating system: Win 10 Pro
Graphics card: AMD Radeon RX 5700 AMD Driver: 20.10.27.02-200708a-357781C-RadeonProEnterprise (11.8.2020 )

Blender Version
version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: 353e5bd749, type: Release

Hello,

I think there is still a bug with the RX 5700. It is possible to render with cycles, which was a problem before (there are many entries for that), but it seems impossible (for me) to create the CL bake kernel. Blender just quits.

Exact steps for others to reproduce the error
Just try to bake the StartUp Cube.

greetings

ITS

[blender_debug_output.txt](https://archive.blender.org/developer/F8813048/blender_debug_output.txt) {[F8813049](https://archive.blender.org/developer/F8813049/blender_system_info.txt)}**System Information** Operating system: Win 10 Pro Graphics card: AMD Radeon RX 5700 AMD Driver: 20.10.27.02-200708a-357781C-RadeonProEnterprise (11.8.2020 ) **Blender Version** version: 2.83.3, branch: master, commit date: 2020-07-22 06:01, hash: 353e5bd7493e, type: Release Hello, I think there is still a bug with the RX 5700. It is possible to render with cycles, which was a problem before (there are many entries for that), but it seems impossible (for me) to create the CL bake kernel. Blender just quits. **Exact steps for others to reproduce the error** Just try to bake the StartUp Cube. greetings ITS

Added subscriber: @MarcusSpengler

Added subscriber: @MarcusSpengler
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58
Contributor

Could you please try again with the newest release and report back? Blender 2.83.5 https://www.blender.org/download/
And one time please with the newest daily build? https://builder.blender.org/download/

Could you please try again with the newest release and report back? Blender 2.83.5 https://www.blender.org/download/ And one time please with the newest daily build? https://builder.blender.org/download/

Version 2.83.5 produces the same error.

Version 2.9.1 generates CL compile error.

Greetings

2.8.5----blender_system_info.txt

2.9,1-----blender_debug_output.txt

2.9.1-----blender_system_info.txt

2.8.5----blender_debug_output.txt

Version 2.83.5 produces the same error. Version 2.9.1 generates CL compile error. Greetings [2.8.5----blender_system_info.txt](https://archive.blender.org/developer/F8814594/2.8.5----blender_system_info.txt) [2.9,1-----blender_debug_output.txt](https://archive.blender.org/developer/F8814595/2.9_1-----blender_debug_output.txt) [2.9.1-----blender_system_info.txt](https://archive.blender.org/developer/F8814596/2.9.1-----blender_system_info.txt) [2.8.5----blender_debug_output.txt](https://archive.blender.org/developer/F8814597/2.8.5----blender_debug_output.txt)

Added subscriber: @iss

Added subscriber: @iss

I get a bit different result, but baking diffuse pass results in empty image and bunch of error messages in console:

Cycles: compiling OpenCL program bake...
Cycles: compiling OpenCL program bake...
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program bake build output: source\kernel/kernels/opencl/kernel_bake.cl:34:84: error: too many arguments to function call, expected 7, have 8
                kernel_bake_evaluate(kg, input, output, (ShaderEvalType)type, filter, x, offset, sample);
                ~~~~~~~~~~~~~~~~~~~~                                                             ^~~~~~
source\kernel/kernel_bake.h:224:12: note: 'kernel_bake_evaluate' declared here
ccl_device void kernel_bake_evaluate(
           ^
1 error generated.

error: Clang front-end compilation failed!
Frontend phase failed compilation.
Error: Compiling CL to IR
OpenCL error: CL_INVALID_KERNEL in clSetKernelArg( kernel, start_argument_index + current_arg_index, arg1.size, arg1.pointer) (C:\Blender-git\1\intern\cycles\device\opencl\device_opencl_impl.cpp:2088)

This one then repeats.

Not sure if this is same issue though.

I get a bit different result, but baking diffuse pass results in empty image and bunch of error messages in console: ``` Cycles: compiling OpenCL program bake... Cycles: compiling OpenCL program bake... OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program bake build output: source\kernel/kernels/opencl/kernel_bake.cl:34:84: error: too many arguments to function call, expected 7, have 8 kernel_bake_evaluate(kg, input, output, (ShaderEvalType)type, filter, x, offset, sample); ~~~~~~~~~~~~~~~~~~~~ ^~~~~~ source\kernel/kernel_bake.h:224:12: note: 'kernel_bake_evaluate' declared here ccl_device void kernel_bake_evaluate( ^ 1 error generated. error: Clang front-end compilation failed! Frontend phase failed compilation. Error: Compiling CL to IR ``` ``` OpenCL error: CL_INVALID_KERNEL in clSetKernelArg( kernel, start_argument_index + current_arg_index, arg1.size, arg1.pointer) (C:\Blender-git\1\intern\cycles\device\opencl\device_opencl_impl.cpp:2088) ``` This one then repeats. Not sure if this is same issue though.

This issue was referenced by blender/cycles@2683ca2fdd

This issue was referenced by blender/cycles@2683ca2fddd2ec90799eb003ccdca2416ec549da

This issue was referenced by d3f2037966

This issue was referenced by d3f2037966882d677711568c81de8b9b7eaec486

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-08-28 13:01:20 +02:00

blender_debug_output.txt

blender_system_info.txt

Hello,

i believe the bug is still there, and has gotten worse.

After I tried to Bake (Blender Version 2.9, AMD Pro Driver) and this did not work again, I installed the normal current AMD driver.

I can now neither render nor bake with the GPU, nothing works anymore: o (

Enclosed the information -> GPU Render Default Scene

greetings

[blender_debug_output.txt](https://archive.blender.org/developer/F8832436/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F8832437/blender_system_info.txt) Hello, i believe the bug is still there, and has gotten worse. After I tried to Bake (Blender Version 2.9, AMD Pro Driver) and this did not work again, I installed the normal current AMD driver. I can now neither render nor bake with the GPU, nothing works anymore: o ( Enclosed the information -> GPU Render Default Scene greetings

In #80149#1007315, @MarcusSpengler wrote:
blender_debug_output.txt

blender_system_info.txt

Hello,

i believe the bug is still there, and has gotten worse.

From the logs it does not look like the same problem. I can bake with GPU, no errors in console.
I would suggest to open new report.

> In #80149#1007315, @MarcusSpengler wrote: > [blender_debug_output.txt](https://archive.blender.org/developer/F8832436/blender_debug_output.txt) > > [blender_system_info.txt](https://archive.blender.org/developer/F8832437/blender_system_info.txt) > > Hello, > > i believe the bug is still there, and has gotten worse. From the logs it does not look like the same problem. I can bake with GPU, no errors in console. I would suggest to open new report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80149
No description provided.