Fix T80149: Cycles OpenCL baking broken after changes to uses tiles for baking

We forgot to update this code as part of D3108. I'd like to include this in 2.90,
it's entirely broken now so can't really get any worse.

Differential Revision: https://developer.blender.org/D8738